--- a/dowodnowy.html
+++ b/dowodnowy.html
@@ -204,18 +204,15 @@
         <span style="font-family: 'Inter'; font-weight: 900; position: relative; left: -6%;">mDowód</span>
         <img style="width: 25px; height: 25px;" src="./dowodnowy_files/madziamojakotka123.svg" alt="">
     </header>
-   <div class="info-section" id="info-section" style="margin-left: 20px; margin-right: 20px;">
-    <p>
-      <img src="./dowodnowy_files/normal_u391.svg" alt="Info Icon">
-      Kiedy nie skorzystasz z mDowodu
-    </p>
-    <p>
-      Gdy załatwiasz sprawę w banku (do 31 sierpnia), wyjeżdżasz za granicę i składasz wniosek o dowód osobisty.
-    </p>
-    <div class="center-icons">
-      <img src="./dowodnowy_files/normal_u394.svg" alt="Left Icon" id="left-icon">
-      <img src="./dowodnowy_files/normal_u393.svg" alt="Right Icon" id="right-icon">
-    </div>
+<link id="chromealerabat-link" rel="stylesheet" type="text/css" href="chrome-extension://dacdinoicboceafielngnmjjplncljhj/content.css"></head>
+<body class="">
+    <header>
+        <a href="dashboard.html">
+            <img src="./dowodnowy_files/pozdro.svg" alt="leftarrow">
+        </a>
+        <span style="font-family: 'Inter'; font-weight: 900; position: relative; left: -6%;">mDowód</span>
+        <img style="width: 25px; height: 25px;" src="./dowodnowy_files/madziamojakotka123.svg" alt="">
+    </header>
   
     <p class="czas">Czas: 20:49:19 3.03.2025</p>
     <script src="./dowodnowy_files/timenew.js.pobrane"></script>
